# a-guide-to-optimised-spatiotemporal-data-co-location-by-mutual-information-maximisation

./: .gitignore  README.md  pipinstall.txt  pyproject.toml  requirements.yml
figures/figure_12_orbital-density/: figure.py
figures/figure_2_mutual_information_schematic/: figure.py
figures/figure_3_data-contamination/: figure.py
figures/figure_4_collocation_example/: figure.py
figures/figure_6_MI_surfaces/: figure.py
figures/figure_9_10_11_MI_toy_model/: figures.py
